use a valid SPDX license identifier

--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
         "mongodb schema",
         "mongodb json schema"
     ],
-    "license": "The MIT License (MIT)",
+    "license": "MIT",
     "licenses": [
         {
             "type": "MIT",
